--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 [dependencies]
 num = "0.2.1"
 
-[dependencies.'cfg(target = "wasm")']
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.62"
 
-[dependencies.'cfg(not(target = "wasm"))']
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 rodio = "0.11"
